--- a/AugmentEPF/app/src/main/res/values-fr/strings.xml
+++ b/AugmentEPF/app/src/main/res/values-fr/strings.xml
@@ -204,7 +204,6 @@
     <string name="man_restroom">Toilettes hommes</string>
     <string name="password_password_confirmation_no_match">Votre mot de passe de confirmation n\'est pas le même que votre mot de passe</string>
     <string name="woman_restroom">Toilettes femmes</string>
-    <string name="admin_code">Code admin</string>
     <string name="need_internet_account">Vous avez besoin d\'une connexion internet pour vous créer un compte</string>
     <string name="error_server">Une erreur est survenue avec le serveur</string>
     <string name="enter_email">Veuillez saisir une adresse e-mail</string>
@@ -242,7 +241,7 @@
     <string name="tuesday">Mardi</string>
     <string name="wednesday">Mercredi</string>
     <string name="to">au</string>
-    <string name="admin_activity_title">Outils Administratifs</string>
+    <string name="admin_activity_title">Outil Administratif</string>
     <string name="admin_edit_beacons">Éditer balises</string>
     <string name="admin_edit_poi">Éditer points d\'intérêts</string>
     <string name="admin_locate">Balise la plus proche</string>
@@ -250,8 +249,6 @@
     <string name="admin_name_missing">Nom requis</string>
     <string name="admin_remove">Supprimer</string>
     <string name="admin_save">Ajouter</string>
-    <string name="admin_target">Le plus proche :</string>
-    <string name="admin_target_missing">Aucun sélectionné(e)</string>
     <string name="admin_xcoord">Coordonnée X :</string>
     <string name="admin_ycoord">Coordonnée Y :</string>
     <string name="confirm">Êtes-vous sûr ?</string>
@@ -261,7 +258,7 @@
     <string name="admin_ground_floor">Rez-de-chaussée</string>
     <string name="admin_lower_floor">Étage inférieur</string>
     <string name="admin_detector_failed">Aucune détectée</string>
-    <string name="admin_edit_rooms">Éditer les salles</string>
+    <string name="admin_edit_rooms">Éditer salles</string>
     <string name="admin_update">Mettre à jour ?</string>
     <string name="admin_save_new">Enregistrer nouveau ?</string>
     <string name="admin_map_error">Carte non disponible</string>
