--- a/AugmentEPF/app/src/main/res/values-fr/strings.xml
+++ b/AugmentEPF/app/src/main/res/values-fr/strings.xml
@@ -213,8 +213,7 @@
     <string name="enter_password_confirmation">Veuillez saisir la confirmation du mot de passe</string>
     <string name="connected">Succès de l\'authentification</string>
     <string name="logout">Se déconnecter</string>
-    <string name="fail_epf_wifi">Veuillez utiliser le Wi-Fi de l\'EPF pour utiliser cette application</string>
-    <string name="success_epf_wifi">Connecté au Wi-Fi de l\'EPF</string>
+    <string name="no_internet">Vous n\'êtes pas connecté à internet</string>
 
     <!--TODO Manage following input-->
     <string name="title_change_mail">Change your mail</string>
